--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -4,9 +4,9 @@
 
 <form>
   <div class="form-group">
-    <label for="todoDescription">Todo Description</label>
+    <label for="description">Todo Description</label>
     <br>
-    <input type="text" [(ngModel)]="newTodo.description" placeholder="description" name="description" />
+    <input type="text" [(ngModel)]="todo.description" placeholder="description" name="description" />
   </div>
-  <button (click)="add(newTodo)" type="submit" class="btn btn-primary">Add new todo</button>
+  <button (click)="add()" type="submit" class="btn btn-primary">Add new todo</button>
 </form>
