added auth, error handling on all forms, route guard

--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -7,7 +7,7 @@
     <label for="description">Todo Description</label>
     <br>
     <input type="text" [(ngModel)]="todo.description" placeholder="description" name="description" />
-    <p>{{ errorMsg.description }}</p>
+    <p style="color: red">{{ errorMsg.description }}</p>
   </div>
   <div class="form-group">
     <label for="priority">Todo Priority</label>
@@ -17,11 +17,7 @@
       <option value="2">2</option>
       <option value="3">3</option>
     </select>
-    <p>{{ errorMsg.priority }}</p>
+    <p style="color: red">{{ errorMsg.priority }}</p>
   </div>
   <button (click)="add()" class="btn btn-info">Add todo</button>
 </form>
-
-<nav>
-  <button class="btn btn-info" routerLink="">Home</button>
-</nav>
