--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 /* Application-wide Styles */
 h1, h2, h3 {
     text-align: center;
+    margin-top: 2rem;
 }
 
 h1 {
@@ -33,6 +34,10 @@ button {
     font-family: Arial, Helvetica, sans-serif;
 }
 nav {
+    margin: 0 auto;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
     margin-top: 3rem;
     text-align: center;
 }
