--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <a routerLink="">Home</a>
-  <a routerLink="/add">Add Todo</a>
-  <a *ngIf="!authService.isAuthenticated()" routerLink="/register">Register</a>
-  <a *ngIf="!authService.isAuthenticated()"routerLink="/login">Login</a>
+  <a *ngIf="authService.isAuthenticated()" routerLink="">Home</a>
+  <a *ngIf="authService.isAuthenticated()" routerLink="/add">Add Todo</a>
+  <a *ngIf="guestService.isGuest()" routerLink="/register">Register</a>
+  <a *ngIf="guestService.isGuest()"routerLink="/login">Login</a>
   <a *ngIf="authService.isAuthenticated()" (click)="logout()" class="link">Logout</a>
 </nav>
